# zorua

./: Cargo.toml  README.md
src/: bits.rs  data_type.rs  lib.rs  native.rs  traits.rs
src/data_type/: aligned.rs  aligned_bytes.rs  fallible.rs  mod.rs  unaligned.rs
src/data_type/endian/: aliases.rs  conversions.rs  mod.rs  num_traits_impl.rs
tests/: ui.rs
tests/ui/: incomplete_bitfield.rs  incomplete_bitfield.stderr  invalid_endian_attr.rs  invalid_endian_attr.stderr  invalid_offset_assertion.rs  invalid_offset_assertion.stderr  invalid_size_assertion.rs  invalid_size_assertion.stderr  native_storage_explicit.rs  native_storage_explicit.stderr  native_storage_no_default.rs  native_storage_no_default.stderr
zorua_macro/: Cargo.toml
zorua_macro/src/: lib.rs
