[workspace]
members = ["zorua_macro"]

[package]
name = "zorua"
version = "0.9.1"
edition = "2024"

[features]
default = ["std"]
std = []

[dependencies]
paste = "^1.0.14"
ux2 = { version = "^0.8.5", features = ["16"] }
zorua_macro = { path = "zorua_macro" }
num-traits = { version = "^0.2", optional = true }
